--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 __pycache__/schemes.cpython-37.pyc
 __pycache__/schemes.cpython-39.pyc
 __pycache__/snakevizzer.cpython-39.pyc
+__pycache__/errorAnalysis.cpython-39.pyc
+__pycache__/LSM2D.cpython-39.pyc
