--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,5 @@
 /oneDLvlSet.py
 /figures
 /profile.prof
-__pycache__/schemes.cpython-37.pyc
-__pycache__/schemes.cpython-39.pyc
-__pycache__/snakevizzer.cpython-39.pyc
-__pycache__/errorAnalysis.cpython-39.pyc
-__pycache__/LSM2D.cpython-39.pyc
+__pycache__/
+lvlset.py
